css/personal_website.css
/* personal_website.css Jul 2017 by Marcos Bernal */
@CHARSET "ISO-8859-1";

/* Removing scrollbars in all body of html */
::-webkit-scrollbar {
    display: none;
}

/* Font for the text
* --------------------------------------- */
h1, h2, h3, h4, p {
    font-family: "Trebuchet MS", Helvetica, sans-serif;
}

h4 {
    margin-top: 2%;
    margin-bottom: 2%;
    font-size: 2.5em !important;
}

/* Font for the text
* --------------------------------------- */
body, html {
    height: 100%;
    line-height: 1.8;
}

p {
    margin-top: 1%;
    margin-botton: 1%;
    font-size: 1.1em !important;
}

.parallax {
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    height: 100%;
}

.text_centered{
   margin: 0px auto;
}

.hidden {
    display: none !important;
}

.w3-black .w3-bar {
    background-color: black; /*rgb(62, 71, 79);*/
}


/*==================================================================================
============================== WELCOME SECTION =====================================
==================================================================================*/
#Welcome, #Welcome2{
    background: url('../imgs/me_and_bike_HDR_reduced_pasteu_6b.jpg') center no-repeat;
    background-size: cover;
    min-height: 100%;
}

#Welcome .welcome_text{
    background-color: black;/*rgb(62, 71, 79) !important;*/
    padding: 2%;
    margin-left: 5%;
    margin-right: 5%;
    height: 100%;
}


/*==================================================================================
============================ EXPERIENCE SECTION ====================================
==================================================================================*/
#Experience{
    background: none;
}

#Experience .show_images{
    display: inline-block;
    margin-left: 5%;
}

#Experience .images_introduction{
    display: inline-block;
    position: absolute;
    width: 50%;
    margin-left: 45%;
    margin-right: 5%;
    background: rgba(76, 175, 80, 0.3);
    height: 40% !important;
}

#Experience .container {
    position: relative;
    width: 40%;
}

#Experience .image {
    display: block;
    width: 100%;
    height: auto;
}

#Experience .overlay {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: #000000;
    overflow: hidden;
    width: 0;
    height: 100%;
    transition: .5s ease;
}

#Experience .container:hover .overlay {
    width: 100%;
}

#Experience .text {
    white-space: nowrap;
    color: white;
    font-size: 20px;
    position: absolute;
    overflow: hidden;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
}

/*==================================================================================
============================== ABOUT ME SECTION ====================================
==================================================================================*/
#AboutMe{
    background-color: rgba(216, 216, 255, 0.51);
    color: #52733B;
    min-height: 100%;
}

/* color 1: #E4EBF2;
#52733B;
#84A45A;
#818A6F;
#715E4E;
*/

/* color 1: #ABA6BF;
#595775;
#583E2E;
#F1E0D6;
#BF988F;
*/

#AboutMe .description{
    padding: 0% 8% 5% 8%;
    text-align: left;
}

#AboutMe .description .showing_button{
    min-width: 120px;
    min-height: 50px;
    padding: 0% 3% 0% 3%;
    cursor:pointer;
}

#AboutMe .description .showing_button img:hover{
    background: darkgrey;
    border: 1px solid darkgrey;
    border-radius: 4px;
}

#AboutMe .description .showing_button #text_button {
    float: right;
}

#AboutMe .description .switching_content{
    border-radius: 25px;
    min-height: 300px;
    min-width: 800px;
    border: 2px solid #73AD21;
    position: relative;
    background: yellow;
    padding: 5% 1% 5% 1%;
}

#AboutMe .description .switching_content #divider{
    position: absolute;
    max-width: 10px;
    border: 2px;
    border-radius: 25px;
    right:0px;
    background: blue;
    overflow: hidden;
}

#AboutMe .description .switching_content #right_graph{
    position: absolute;
    width: 0px; height: 0px; /*Avoid the graph if javascript not available*/
    top:0px;
    right:10px;
    background: black;
    overflow: hidden;
}

#AboutMe .description .switching_content #right_graph #mynetwork{
    min-width: 750px;
    height: 300px;
    border: 1px solid lightgray;
    float: right;
    background: whitesmoke;

}

#AboutMe .description p{
    color: black;
    text-align: justify;
}


/*
===================================================================================
============================== CONTACT SECTION ====================================
=================================================================================*/


#Contact .w3-container{
    margin-left: 10%;
    margin-right: 10%;
    color: #52733B;
}

#Contact .w3-col{
    height: 100%;
    width: 50px;
    text-align: center;
}

#Contact .w3-button{
    background-color: gainsboro;
    color: black;
}

#Contact .fa-paper-plane{
    color: #52733B;
}


.menu.responsive{
    display: none;
}


/*=================================================================================
======================= MENU INSPIRED FROM FULLPAGEJS =============================
=================================================================================*/
#welcome_menu {
    position:absolute;
    width:100%;
    z-index:1;
    top:0;
}

#menu{
    position:fixed;
    top: 0;
    left:0;
    height: 40px;
    z-index: 70;
    width: 100%;
    padding: 0;
    margin:0;
}

#menu li {
    display:inline-block;
    margin: 10px;
    color: #fff;
    background-color: rgba(0, 0, 0, 0.8);
    -webkit-border-radius: 10px;
    border-radius: 10px;
}

#menu li a{
    text-decoration:none;
    color: #fff;
    padding: 9px 18px;
    display:block;
}

#menu li:hover{
    background: rgba(255, 255, 255, 0.7) !important;;
}

#menu li a:hover{
    color: rgba(0, 0, 0, 1);
    background: rgba(0, 0, 0, 0.2) !important;
    -webkit-border-radius: 10px;
    border-radius: 10px;
}

